--- a/styles/video.css
+++ b/styles/video.css
@@ -1,6 +1,6 @@
 .video-grid {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
     column-gap: 20px;
     row-gap: 30px;
 }
