--- a/styles/header.css
+++ b/styles/header.css
@@ -116,10 +116,12 @@
 }
 
 .upload {
+    cursor: pointer;
     width: 32px;
 }
 
 .youtube-apps {
+    cursor: pointer;
     width: 32px;
 }
 
@@ -136,6 +138,7 @@
 }
 
 .notification-icon {
+    cursor: pointer;
     width: 32px;
 }
 
@@ -143,7 +146,7 @@
     width: 38px;
     height: 38px;
     border-radius: 19px;
-
+    cursor: pointer;
 }
 
 .upload-button, .youtube-apps-button, .notification {
